# base

./: .gitignore  Makefile  Makefile.am  Makefile.in  NOTES  README  TODO  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/notes/: 001-perf-experiments.txt
etc/: .sysreact.dat.swp  redis.conf
include/common/: defs.h
include/mq/: callback.h  mqueue.h
include/mv/: addr.h  auth.h  defs.h  device.h  event.h  func.h  message.h  prop.h  service.h  transport.h  value.h
include/mvcc/: mvcc.h  mvcc.hh
include/support/: daemon.h  error.h  jsonutil.h  logger.h
libmq/: Makefile  Makefile.am  Makefile.in  callback.c  mqueue.c  mqutil.c  mqutil.h  sockpool.h
libmq/.deps/: libmq_a-callback.Po  libmq_a-mqueue.Po  libmq_a-mqutil.Po
libmv/: Makefile  Makefile.am  Makefile.in  device.c  event.c  func.c  message.c  mv_addr.c  mv_device.c  mv_message.c  mv_netutil.c  mv_netutil.h  mv_sendrecv.c  mv_sendrecv_sock.c  mv_sendrecv_zmq.c  mv_transport.c  mv_transport_tcp.c  mv_value.c  prop.c  sendrecv.c  sendrecv_sock.c  sendrecv_zmq.c  value.c
libmv/.deps/: libmv_a-device.Po  libmv_a-event.Po  libmv_a-func.Po  libmv_a-prop.Po  libmv_a-value.Po
libmvcc/: Makefile.am  mvcc.cc
libsup/: .gitignore  Makefile  Makefile.am  Makefile.in  daemon.c  error.c  logger.c
libsup/.deps/: libsup_a-daemon.Po  libsup_a-error.Po  libsup_a-logger.Po
mvc/: .gitignore  Makefile  Makefile.am  location.hh  mvc.h  mvc_analyzer.cc  mvc_analyzer.hh  mvc_base.h  mvc_base.hh  mvc_error.cc  mvc_error.hh  mvc_exp.cc  mvc_exp.cpp  mvc_exp.h  mvc_exp.hh  mvc_ir.hh  mvc_iterator.cc  mvc_iterator.hh  mvc_main.cc  mvc_main.cpp  mvc_module.cpp  mvc_module.h  mvc_module.hh  mvc_parse.cc  mvc_parse.h  mvc_parse.hh  mvc_parse.yy  mvc_parser.cc  mvc_parser.cpp  mvc_parser.h  mvc_parser_driver.cpp  mvc_parser_driver.h  mvc_parser_driver.hh  mvc_pass.hh  mvc_print.cc  mvc_print.cpp  mvc_scan.c  mvc_scan.cc  mvc_scan.hh  mvc_scan.ll  (+15 more)
mvc/adt/: ilist.h
mvc/epl/: epl_analyze.cpp  epl_analyzer.h  epl_analyzer_driver.cpp  epl_analyzer_driver.h  epl_analyzer_server.cpp  epl_iterator.cpp  epl_iterator.h  epl_parse.y  epl_parser.h  epl_parser_driver.cpp  epl_parser_driver.h  epl_parser_server.cpp  epl_pass.h  epl_print.cpp  epl_scan.l  epl_server.cpp  epl_symtab.cpp  epl_symtab.h  epl_util.h  module.mk
mvcomp/: meadow_exp.h
mvrt/: #main.c#  .gitignore  Makefile  Makefile.am  Makefile.in  code.c  code.h  config.h  context.c  context.h  env.c  env.h  eval.c  eval.h  evqueue.c  evqueue.h  main.c  mdecoder.c  mdecoder.h  mencoder.h  message.c  message.h  mvrt  operator.c  operator.h  options.c  reactor.c  reactor.h  repl.c  rtcode.c  rtcode.h  rtcontext.c  rtcontext.h  rtdecoder.c  rtdecoder.h  rterror.c  rterror.h  rteval.c  rteval.h  rtevent.c  (+25 more)
mvrt/.deps/: mvrt-code.Po  mvrt-context.Po  mvrt-eval.Po  mvrt-evqueue.Po  mvrt-main.Po  mvrt-mdecoder.Po  mvrt-message.Po  mvrt-operator.Po  mvrt-reactor.Po  mvrt-rtevent.Po  mvrt-rtfunc.Po  mvrt-rtprop.Po  mvrt-rtsched.Po  mvrt-rtvalue.Po
mvrt/z/: message.h  rtvalue.c  rtvalue.h
mvsh/: #main.c#  .#main.c  .gitignore  Makefile  Makefile.am  command.c  command.h  main.c  repl.c  repl.h  sh_main.c
platform/linux/term/: term.c
platform/rpi/gpio/: Makefile  rgpioCtrl.c  test.c
server/: .gitignore  Makefile  Makefile.am  Makefile.in  server  svr_device.cc  svr_device.cpp  svr_device.h  svr_device.hh  svr_main.cc  svr_main.cpp  svr_message.cc  svr_message.cpp  svr_message.h  svr_message.hh  svr_processor.cc  svr_processor.cpp  svr_processor.h  svr_processor.hh
server/.deps/: server-svr_device.Po  server-svr_main.Po  server-svr_message.Po  server-svr_processor.Po
test/: .gitignore  .reactor.dat.swp  Makefile  Makefile.am  Makefile.in  client  client.c  gpio  mvrt  term
test/.deps/: client-client.Po
test/demo-cam/cam/: cam.mv
test/demo-cam/mon/: mon.mv
test/demo-led/: README.txt
test/demo-led/dev1/: gpio  mvrt
test/demo-term/dev0/: run.sh
test/demo-term/dev0/plugin/: .#Makefile  Makefile  reader.cc
test/demo-term/dev1/: .gdbinit  run.sh
test/demo/dev0/: run.sh
test/demo/dev1/: run.sh
test/gpio/: rgpioCtrl.c  rpigpio.c  rpigpio.h  test
test/hello/: Makefile  func.c
test/mvc/: test01.mvc
test/mvc-tests/: Makefile  mvc
test/mvc-tests/test02/: test.mv
test/mvc/test01/: test.mv
test/mvc/test02/: test.mv
test/term/: Makefile  term.c
test/test-client/: client.c
test/ztmp/: configure.ac
tools/: Makefile  Makefile.am  Makefile.in
tools/mvc/: Makefile  location.hh  mvc_analyzer.hh  mvc_iterator.cc  mvc_iterator.hh  mvc_main.cc  mvc_module.cc  mvc_module.hh  mvc_parse.cc  mvc_parse.hh  mvc_parser.hh  mvc_parser_driver.cc  mvc_print.cc  mvc_symtab.hh  mvc_util.hh  position.hh  stack.hh
tools/mvc/adt/: bitvector.h
tools/mvsh/: Makefile  Makefile.am  sh_command.c  sh_command.h  sh_main.c  sh_repl.c
